samples/_failures_safe/1761176827_be8014_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c96c87ed.c: In function ‘main’:
./samples/SAFE/__tmp_c96c87ed.c:184:27: error: ‘TOKEN’ undeclared (first use in this function)
  184 |         if (token.type == TOKEN
      |                           ^~~~~
./samples/SAFE/__tmp_c96c87ed.c:184:27: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_c96c87ed.c:184:32: error: expected ‘)’ at end of input
  184 |         if (token.type == TOKEN
      |            ~                   ^
      |                                )
./samples/SAFE/__tmp_c96c87ed.c:184:9: error: expected declaration or statement at end of input
  184 |         if (token.type == TOKEN
      |         ^~
./samples/SAFE/__tmp_c96c87ed.c:184:9: error: expected declaration or statement at end of input
